lang/tests/contract/common/ui/fail/33-empty-interface-name.rs
use liquid_lang as liquid;

#[liquid::interface(name = "")]
mod foo {
    extern "liquid" {
        fn bar();
    }
}

fn main() {}